--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
       ],
       "rules": {
         // ESLINT
+        "linebreak-style": ["error", "consistent"],
         "import/prefer-default-export": "off",
         "import/first": "error",
         "import/newline-after-import": "error",
